# ros-python-template

./: CMakeLists.txt  README.md  package.xml
scripts/: control.py  main.py  run.py
scripts/utils/: __init__.py  distance_sensor.py  line_sensor.py  motors.py
